--- a/Java/WebApp/pom.xml
+++ b/Java/WebApp/pom.xml
@@ -8,5 +8,12 @@
     <artifactId>WebApp</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <plugins>
+        <plugin>
+            <groupId>org.apache.tomcat.maven</groupId>
+            <artifactId>tomcat7-maven-plugin</artifactId>
+            <version>2.2</version>
+        </plugin>
+    </plugins>
 
 </project>
