--- a/Java/Stuff/.project
+++ b/Java/Stuff/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>TestTable</name>
+	<name>Stuff</name>
 	<comment></comment>
 	<projects>
 	</projects>
